...
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingHorizontal="@dimen/horizontal_padding">

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="Save"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="HardcodedText" />
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pollenLabel" />

        <Switch
            android:id="@+id/seen_queen_switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:buttonTint="@color/colorPrimaryDark"
            android:text="@string/seen_queen"
            android:textColor="@android:color/primary_text_light"
...
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/tableHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spacer" />

        <RadioGroup
            android:id="@+id/honeyInput"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/broodLabel"
            app:layout_constraintEnd_toEndOf="parent"
...
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/tableHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/honeyLabel" />

        <RadioGroup
            android:id="@+id/broodInput"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/pollenLabel"
            app:layout_constraintEnd_toEndOf="parent"
...
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/tableHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/broodLabel" />

        <RadioGroup
            android:id="@+id/pollenInput"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center|center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/pollenLabel"
            app:layout_constraintEnd_toEndOf="parent"
...
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:buttonTint="@color/colorPrimaryDark" />
        </RadioGroup>

        <EditText
            android:id="@+id/notesInput"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/border"
            android:drawableTop="@android:drawable/divider_horizontal_dark"
...
