<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.hive.HiveDetail">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/horizontal_padding">

        <TextView
            android:id="@+id/field_created"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="right|center_vertical"
            android:textAlignment="gravity"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/label_created"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/label_created"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
            android:id="@+id/label_created"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="80dp"
            android:gravity="start|center_vertical"
            android:text="Created On:"
            android:textAlignment="gravity"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/title" />

        <TextView
            android:id="@+id/label_inspections"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="start|center_vertical"
            android:text="Inspections:"
            android:textAlignment="gravity"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/field_created"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_created" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:drawableBottom="@android:drawable/divider_horizontal_dark"
            android:fontFamily="sans-serif-light"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/inspections"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_inspections"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/add_inspection"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="+"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/inspections"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/field_created" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>