...
        android:id="@+id/navigation_yard_view"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="Yard View"
        tools:ignore="HardcodedText" />

    <item
        android:id="@+id/navigation_hive_list"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="List of Hives"
        tools:ignore="HardcodedText" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_hive_form_foreground"
        android:title="@string/title_home" />
...
